[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-devhelper"
version = "0.1.0"
description = "Un assistente AI per sviluppatori con Google Gemini"
authors = [{name = "Il tuo nome", email = "tua@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "development", "assistant", "gemini", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-generativeai>=0.3.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.812",
]

[project.urls]
Homepage = "https://github.com/tuousername/devhelper"
Repository = "https://github.com/tuousername/devhelper"
Issues = "https://github.com/tuousername/devhelper/issues"
Documentation = "https://github.com/tuousername/devhelper#readme"

[project.scripts]
devhelper = "ai_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true